--- a/apigateway/code/package.json
+++ b/apigateway/code/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon start.js"
+    "dev": "nodemon start.js",
+    "lint": "eslint ."
   },
   "nodemonConfig": {
     "ignore": [
@@ -21,11 +22,10 @@
     "lowdb": "^7.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
     "http-proxy-middleware": "^3.0.3",
     "nodemon": "^3.1.7"
   }
 }
-
-
-
-
