--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "In this backend example for a project, a folder is created for each micoservice.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "vite build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.0.1"
+    "jest": "^29.7.0"
   }
 }
