--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "In this backend example for a project, a folder is created for each micoservice.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
-    
+    "test": "jest",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
     "jest": "^29.7.0"
   }
 }
