--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "globals": "^15.12.0",
     "jest": "^29.7.0"
