--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# Ignore specific package-lock.json files
+microserviceMarket/code/package-lock.json
+microserviceUser/code/package-lock.json
+
 # User-specific stuff
 ## Normally this is more specific, but let's just nuke the whole folder.
 .idea/
