--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,18 @@ services:
       - "3012:3012"
     working_dir: /usr/src/app
     command: bash -c "npm install && npm run dev"
+  microservice_card:
+    container_name: microserviceCard
+    build: ./microserviceCard
+    volumes:
+      - ./microserviceCard/code:/usr/src/app
+    networks:
+      - msexample
+    ports:
+      - "3013:3013"
+    working_dir: /usr/src/app
+    command: bash -c "npm install && npm run dev"
+
   gateway:
     image: node:lts
     volumes:
